--- a/src/output.css
+++ b/src/output.css
@@ -637,7 +637,7 @@ video {
 }
 
 .font-body {
-  font-family: Michroma, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  font-family: Instrument Sans, ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
 .text-5xl {
