--- a/style.css
+++ b/style.css
@@ -631,9 +631,8 @@ video {
   background-repeat: no-repeat;
 }
 
-.py-14 {
+.pt-14 {
   padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
 }
 
 .font-body {
